meta tags added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="/image1.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meditation Online</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg" href="src/assets/image1.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- HTML Meta Tags -->
+  <title>Meditation Online</title>
+  <meta name="description" content="Simple meditation application with sounds and timer">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://meditationapponline.netlify.app/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Meditation Online">
+  <meta property="og:description" content="Simple meditation application with sounds and timer">
+  <meta property="og:image"
+    content="https://opengraph.b-cdn.net/production/documents/2a58732f-6876-47f1-8579-9778f57835fe.png?token=sFUSLl23njkNaPB7D743VIeu3TYt7p13yUUCGXigM5k&height=630&width=1200&expires=33240815142">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="meditationapponline.netlify.app">
+  <meta property="twitter:url" content="https://meditationapponline.netlify.app/">
+  <meta name="twitter:title" content="Meditation Online">
+  <meta name="twitter:description" content="Simple meditation application with sounds and timer">
+  <meta name="twitter:image"
+    content="https://opengraph.b-cdn.net/production/documents/2a58732f-6876-47f1-8579-9778f57835fe.png?token=sFUSLl23njkNaPB7D743VIeu3TYt7p13yUUCGXigM5k&height=630&width=1200&expires=33240815142">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
